# vad-burn

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: release.yml
examples/: bench_fsmn_vad.rs
python/vad_burn/: __init__.py  __init__.pyi  vad_burn.pyi
scripts/: release.sh
src/fsmn/: constants.rs  frontend.rs  model.rs  ops.rs  weights.rs
vad-burn/: Cargo.toml
vad-burn/examples/: bench_firered_vad.rs  bench_fsmn_vad.rs  firered_stream_vad.rs  firered_vad.rs
vad-burn/src/: lib.rs  py.rs  types.rs
vad-burn/src/firered/: mod.rs  model.rs
vad-burn/src/fsmn/: e2e.rs  frontend.rs  mod.rs  model.rs  post.rs  timing.rs  weights.rs
vad-data/: Cargo.toml
vad-data/src/: lib.rs
