[workspace]
resolver = "2"

[package]
name = "vad-burn"
version = "0.1.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/di-osc/vad-burn"
description = "Burn Flex CPU FSMN VAD"

[lib]
name = "vad_burn"
crate-type = ["rlib", "cdylib"]

[features]
default = []
apple-amx = ["burn-flex/apple-amx"]
python = ["dep:pyo3", "pyo3/abi3-py39"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
anyhow = "1"
burn = { version = "0.21.0", default-features = false, features = ["std", "flex", "store", "simd"] }
burn-flex = { version = "0.21.0", default-features = false, features = ["rayon"] }
burn-store = "0.21.0"
kaldi-fbank-rust-kautism = "0.1.0"
modelhub = "0.1.1"
pyo3 = { version = "0.25.1", optional = true, features = ["anyhow"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"

[lints]
workspace = true
