[package]
name = "vad-burn"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Burn Flex CPU FSMN VAD"

[lib]
name = "vad_burn"
crate-type = ["rlib", "cdylib"]

[features]
default = []
python = ["dep:pyo3"]
extension-module = ["python", "pyo3/extension-module"]

[dependencies]
anyhow = "1"
burn = { version = "0.21.0", default-features = false, features = ["std", "flex", "store", "simd"] }
burn-flex = { version = "0.21.0", default-features = false, features = ["rayon"] }
burn-store = "0.21.0"
kaldi-fbank-rust-kautism = "0.1.0"
modelhub = "0.1.1"
pyo3 = { version = "0.25.1", optional = true, features = ["anyhow"] }
tokio = { version = "1", features = ["rt-multi-thread"] }

[lints]
workspace = true
